# UncertaintyCat

./: .gitignore  LICENSE  README.md  UncertaintyCat.py  app.py  changes.txt  csv_maker.py  pyproject.toml  readme.md  requirements.txt  sample_inputs.csv  test_all_examples.py
app/: chat_utils.py  components.py  config.py  core.py  displays.py  state.py
examples/: Beam.py  Bike_Speed.py  Borehole.py  Borehole_Model.py  Chaboche_Model.py  Chemical_Reactor.py  Cylinder_heating.py  Damped_Oscillator.py  Epidemic_Model.py  FloodModel.py  Flood_Model.py  Ishigami.py  Logistic_Model.py  Material_Stress.py  Morris_Function.py  Portfolio_Risk.py  Rocket_Trajectory.py  Solar_Panel_Output.py  Stiffened_Panel.py  Trump_Tariff.py  Truss_Model.py  TubeDeflection.py  Tube_Deflection.py  Undamped_Oscillator.py  Viscous_Freefall.py  Wind_Turbine_Power.py
modules/: ancova_analysis.py  api_utils.py  code_safety.py  common_prompt.py  correlation_analysis.py  distribution_fitting.py  expectation_convergence_analysis.py  exploratory_data_analysis.py  fast_analysis.py  fast_ancova_analysis.py  forbidden_patterns.py  hsic_analysis.py  instructions.py  markdown_utils.py  ml_analysis.py  model_options_list.py  model_understanding.py  model_utils.py  model_validation.py  monte_carlo.py  morris_analysis.py  morris_sensitivity_analysis.py  openturns_utils.py  overall_analysis.py  pce_least_squares.py  pce_least_squares_utils.py  pce_sobol.py  pce_surrogate.py  pce_treemap.py  reliability.py  session_state_utils.py  sobol_sensitivity_analysis.py  statistical_utils.py  taylor_analysis.py
(+33 files in other folders)
