[project]
name = "uncertaintycat"
version = "0.1.0"
description = "Streamlit-based uncertainty quantification workspace"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "openturns",
    "SALib",
    "scikit-learn",
    "llvmlite",
    "shap",
    "scipy",
    "groq",
    "streamlit",
    "openai==0.28",
    "plotly",
    "astor",
    "tabulate",
    "IPython",
    "squarify",
    "otmorris==0.16",
    "chaospy",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[tool.uv]
package = true
